--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@ ENTREGA:  una sóla imagen con  las tres capturas de pantalla  y un  sólo  docu
     <img src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/cupe-deportivo-amarillo-carretera-puesta-sol_114579-4064.webp" alt="foto5">
     <img src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/dinero-euros-monedas-euros-apiladas-encima-otra-diferentes-posiciones-contexto-billetes-euros-concepto-finanzas-empresariales-maqueta-banner-pantalla-bienvenida-noticias-negocios_166373-2825.webp" alt="foto6">
     <img src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/futbol-gigante-entorno-urbano_23-2150760354.webp" alt="foto7">
-    <img src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/gato.gif" alt="foto8">
+    <video src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/gato.mp4"></video>
     <img src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/ilustracion-cristiano-ronaldo13_1005426-864.webp" alt="foto9">
-    <img src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/price.gif" alt="foto10">
+    <video src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/price.mp4" alt="foto10"></video>
     <img src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/simbolo-anarquia-diseno-plano-dibujado-mano_23-2149259700.webp" alt="foto11">
     <img src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/skjolden-noruega-16-mayo-2023-montana_58702-11010.webp" alt="foto12">
 
