--- a/index.html
+++ b/index.html
@@ -46,19 +46,18 @@ ENTREGA:  una sóla imagen con  las tres capturas de pantalla  y un  sólo  docu
 
 <body>
     <div class="contenedor">
-        <img src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/bandera-comunidad-valenciana_1398-2655.webp" alt="foto1">
-    <img src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/bebida-cola-fresca-vidrio_144627-16212.webp" alt="foto2">
-    <img src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/concepto-dinero-fotorrealista_23-2151027566.webp" alt="foto3">
-    <img src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/craneo-vikingo-tibias-cruzadas-vector-diseno_43623-1273.webp" alt="foto4">
-    <img src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/cupe-deportivo-amarillo-carretera-puesta-sol_114579-4064.webp" alt="foto5">
-    <img src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/dinero-euros-monedas-euros-apiladas-encima-otra-diferentes-posiciones-contexto-billetes-euros-concepto-finanzas-empresariales-maqueta-banner-pantalla-bienvenida-noticias-negocios_166373-2825.webp" alt="foto6">
-    <img src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/futbol-gigante-entorno-urbano_23-2150760354.webp" alt="foto7">
-    <video src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/gato.mp4"></video>
-    <img src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/ilustracion-cristiano-ronaldo13_1005426-864.webp" alt="foto9">
-    <video src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/price.mp4" alt="foto10"></video>
-    <img src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/simbolo-anarquia-diseno-plano-dibujado-mano_23-2149259700.webp" alt="foto11">
-    <img src="https://raw.githubusercontent.com/mxragnar/fotosDIW/main/skjolden-noruega-16-mayo-2023-montana_58702-11010.webp" alt="foto12">
-
+    <img src="bandera-comunidad-valenciana_1398-2655.webp" alt="foto1">
+    <img src="bebida-cola-fresca-vidrio_144627-16212.webp" alt="foto2">
+    <img src="concepto-dinero-fotorrealista_23-2151027566.webp" alt="foto3">
+    <img src="craneo-vikingo-tibias-cruzadas-vector-diseno_43623-1273.webp" alt="foto4">
+    <img src="cupe-deportivo-amarillo-carretera-puesta-sol_114579-4064.webp" alt="foto5">
+    <img src="dinero-euros-monedas-euros-apiladas-encima-otra-diferentes-posiciones-contexto-billetes-euros-concepto-finanzas-empresariales-maqueta-banner-pantalla-bienvenida-noticias-negocios_166373-2825.webp" alt="foto6">
+    <img src="futbol-gigante-entorno-urbano_23-2150760354.webp" alt="foto7">
+    <video src="gato.mp4"></video>
+    <img src="ilustracion-cristiano-ronaldo13_1005426-864.webp" alt="foto9">
+    <video src="price.mp4" alt="foto10"></video>
+    <img src="simbolo-anarquia-diseno-plano-dibujado-mano_23-2149259700.webp" alt="foto11">
+    <img src="skjolden-noruega-16-mayo-2023-montana_58702-11010.webp" alt="foto12">
    </div>
 
 <h2>Tabla de Imágenes antes de mejorar</h2>
