--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@ ENTREGA:  una sóla imagen con  las tres capturas de pantalla  y un  sólo  docu
         img {
             flex: 0 0 calc(50% - 10px);
             margin: 5px;
+            height: 600px;
+            width: 600px;
+        }
+        video{
+            height: 600px;
+            width: 600px;
         }
     </style>
 </head>
