--- a/index.html
+++ b/index.html
@@ -52,18 +52,126 @@ ENTREGA:  una sóla imagen con  las tres capturas de pantalla  y un  sólo  docu
 
 <body>
     <div class="contenedor">
-    <img src="bandera-comunidad-valenciana_1398-2655.webp" alt="foto1">
-    <img src="bebida-cola-fresca-vidrio_144627-16212.webp" alt="foto2">
-    <img src="concepto-dinero-fotorrealista_23-2151027566.webp" alt="foto3">
-    <img src="craneo-vikingo-tibias-cruzadas-vector-diseno_43623-1273.webp" alt="foto4">
-    <img src="cupe-deportivo-amarillo-carretera-puesta-sol_114579-4064.webp" alt="foto5">
-    <img src="dinero-euros-monedas-euros-apiladas-encima-otra-diferentes-posiciones-contexto-billetes-euros-concepto-finanzas-empresariales-maqueta-banner-pantalla-bienvenida-noticias-negocios_166373-2825.webp" alt="foto6">
-    <img src="futbol-gigante-entorno-urbano_23-2150760354.webp" alt="foto7">
-    <video src="gato.mp4"></video>
-    <img src="ilustracion-cristiano-ronaldo13_1005426-864.webp" alt="foto9">
-    <video src="price.mp4" alt="foto10"></video>
-    <img src="simbolo-anarquia-diseno-plano-dibujado-mano_23-2149259700.webp" alt="foto11">
-    <img src="skjolden-noruega-16-mayo-2023-montana_58702-11010.webp" alt="foto12">
+<div>
+            <figure>
+                <picture>
+                    <source srcset="" type="img/webp">
+                    <img src="bandera-comunidad-valenciana_1398-2655.webp" alt="foto1">
+                </picture>
+                <figcaption>Imagen de prueba</figcaption>
+            </figure>
+        </div>
+
+        <div>
+            <figure>
+                <picture>
+                    <source srcset="" type="img/webp">
+                    <img src="bebida-cola-fresca-vidrio_144627-16212.webp" alt="foto2">
+                </picture>
+                <figcaption>Imagen de prueba</figcaption>
+            </figure>
+        </div>
+
+        <div>
+            <figure>
+                <picture>
+                    <source srcset="" type="img/webp">
+                    <img src="concepto-dinero-fotorrealista_23-2151027566.webp" alt="foto3">
+                </picture>
+                <figcaption>Imagen de prueba</figcaption>
+            </figure>
+        </div>
+
+        <div>
+            <figure>
+                <picture>
+                    <source srcset="" type="img/webp">
+                    <img src="craneo-vikingo-tibias-cruzadas-vector-diseno_43623-1273.webp" alt="foto4">
+                </picture>
+                <figcaption>Imagen de prueba</figcaption>
+            </figure>
+        </div>
+
+        <div>
+            <figure>
+                <picture>
+                    <source srcset="" type="img/webp">
+                    <img src="cupe-deportivo-amarillo-carretera-puesta-sol_114579-4064.webp" alt="foto5">
+                </picture>
+                <figcaption>Imagen de prueba</figcaption>
+            </figure>
+        </div>
+
+        <div>
+            <figure>
+                <picture>
+                    <source srcset="" type="img/webp">
+                    <img src="dinero-euros-monedas-euros-apiladas-encima-otra-diferentes-posiciones-contexto-billetes-euros-concepto-finanzas-empresariales-maqueta-banner-pantalla-bienvenida-noticias-negocios_166373-2825.webp" alt="foto6">
+                </picture>
+                <figcaption>Imagen de prueba</figcaption>
+            </figure>
+        </div>
+    
+   
+        <div>
+            <figure>
+                <picture>
+                    <source srcset="" type="img/webp">
+                    <img src="futbol-gigante-entorno-urbano_23-2150760354.webp" alt="foto7">
+                    </picture>
+                <figcaption>Imagen de prueba</figcaption>
+            </figure>
+        </div>
+
+        <div>
+            <figure>
+                <picture>
+                    <source srcset="" type="img/mp4">
+                    <video src="gato.mp4"></video>
+                    </picture>
+                <figcaption>Imagen de prueba</figcaption>
+            </figure>
+        </div>
+
+        <div>
+            <figure>
+                <picture>
+                    <source srcset="" type="img/webp">
+                    <img src="ilustracion-cristiano-ronaldo13_1005426-864.webp" alt="foto9">
+                    </picture>
+                <figcaption>Imagen de prueba</figcaption>
+            </figure>
+        </div>
+
+        <div>
+            <figure>
+                <picture>
+                    <source srcset="" type="img/mp4">
+                    <video src="price.mp4" alt="foto10"></video>
+                    </picture>
+                <figcaption>Imagen de prueba</figcaption>
+            </figure>
+        </div>
+
+        <div>
+            <figure>
+                <picture>
+                    <source srcset="" type="img/webp">
+                    <img src="simbolo-anarquia-diseno-plano-dibujado-mano_23-2149259700.webp" alt="foto11">
+                    </picture>
+                <figcaption>Imagen de prueba</figcaption>
+            </figure>
+        </div>
+
+        <div>
+            <figure>
+                <picture>
+                    <source srcset="" type="img/webp">
+                    <img src="skjolden-noruega-16-mayo-2023-montana_58702-11010.webp" alt="foto12">
+                    </picture>
+                <figcaption>Imagen de prueba</figcaption>
+            </figure>
+        </div>
    </div>
 
 <h2>Tabla de Imágenes antes de mejorar</h2>
