--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!--
-    05-06 Imágenes
+05-06 Imágenes
 En esta práctica debes ingresar varias imágenes en una página web y comparar el tiempo de carga hasta minimizarlo por completo.
 Utiliza sitios libres de derechos para descargar 12 imágenes con la resolución más alta posible. Incluye formatos JPG, GIF y PNG. 
 Crear una página web para organizar las imágenes usando el modelo flexbox, de modo que quepan dos imágenes por ancho.Obtendrás 6 filas de dos imágenes por fila. NO CAMBIAR EL TAMAÑO ORIGINAL.
 Agregue etiquetas ALT a todas las imágenes. Respeta el copyleft utilizando las etiquetas apropiadas para dar el crédito necesario al autor de la imagen.
 Crear un proyecto en Github y publicar la página. Siga el siguiente manual:https://docs.github.com/es/pages/getting-started-with-github-pages/creating-a-github-pages-site
 Usar herramientas de Google (https://pagespeed.web.dev/) para comprobar el tiempo de carga de la página, crear una tabla e indicar el tamaño medio, formato de imagen utilizado y tiempo de carga.Agregue la tabla a la página web.
-COPIAR LA PÁGINA WEB EN OTRA.Optimiza el tamaño de las imágenes. Utiliza etiquetas PICTURE, SRCSET y MEDIA para incluir distintos tamaños y formatos de imagen.  Realiza nuevamente la prueba de tiempo de carga y actualiza los datos de la tabla.
+
+CAPTURA EL PRIMER PANTALLAZO
+
+COPIAR LA PÁGINA WEB EN OTRA.Optimiza el tamaño Y EL FORMATO (INVESTIGA SOBRE NUEVOS FORMATOS) de las imágenes. Utiliza etiquetas PICTURE, SRCSET y MEDIA para incluir distintos tamaños y formatos de imagen.  Realiza nuevamente la prueba de tiempo de carga y actualiza los datos de la tabla.
 COPIA LA ÚLTIMA PÁGINA WEB EN OTRA.Ahora seguiremos los consejos de la página de Google. en cuanto a formatos.Puedes utilizar la herramienta gráfica que quieras para configurarlos, a modo de ejemplo aquí tienes varias: https://www.dosmedia.com/tratamiento-de-imagenes-para-tu-pagina-web/
 Aplicación de Estilos CSS:
 Usar object-fit y object-position para asegurar que las imágenes se muestren correctamente en su contenedor.
@@ -20,8 +23,8 @@ Añadir border-image a alguna imagen para mostrar cómo se puede usar una imagen
 Responsividad:
 Asegurarse de que la galería se vea bien en diferentes tamaños de pantalla, incluyendo teléfonos móviles y tablets.
 Interactividad:
-Agregar interactividad con JavaScript, como cambiar la opacidad o el filtro al pasar el mouse sobre las imágenes.
-ENTREGA:  una sóla imagen con  las tres capturas de pantalla  y un  sólo  documento  HTML con el código final.
+Agregar interactividad con JavaScript, cómo cambiar la opacidad o el filtro al pasar el mouse sobre las imágenes.
+ENTREGA:  una sóla imagen con DOS capturas de pantalla de Google Insight, una antes de optimizar y otra después   (junta las dos en una sola) y un  sólo  documento  HTML con el código final.
 
 -->
 <!DOCTYPE html>
